...
            "ja" to "箇条書き",
            "ko" to "글머리 기호",
            "th" to "รายการสัญลักษณ์"
        ),
        "cancel" to mapOf(
            "zh-Hant" to "取消",
            "en" to "Cancel",
            "zh-Hans" to "取消",
            "ja" to "キャンセル",
            "ko" to "취소",
            "th" to "ยกเลิก"
        ),
        "cancel_selection_hint" to mapOf(
...
            "ja" to "残り%@日",
            "ko" to "%@일 남음",
            "th" to "เหลืออีก %@ วัน"
        ),
        "trash_delete_forever" to mapOf(
            "zh-Hant" to "永久刪除",
            "en" to "Delete Permanently",
            "zh-Hans" to "永久删除",
            "ja" to "完全に削除",
            "ko" to "영구 삭제",
            "th" to "ลบถาวร"
        ),
        "trash_delete_forever_confirm_message" to mapOf(
...
